# django-models

./: README.md  pyproject.toml
Templates/: base.html  home.html  snacks_detail.html  snacks_list.html
snack_tracker_project/: settings.py  urls.py
snacks/: models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
